--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <title>Chaoyi Wu</title>
   
-  <meta name="author" content="Chaoyi Wu">
+  <meta name="author" content="Qiaoyu Zheng">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
