--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Chaoyi Wu</title>
+  <title>Qiaoyu Zheng</title>
   
   <meta name="author" content="Qiaoyu Zheng">
   <meta name="viewport" content="width=device-width, initial-scale=1">
