--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 	      <p>
 		      My current research interest is in multimodal learning for medical image analysis.
               </p>      
-              <a href="wtzxxxwcy02@sjtu.edu.cn">Email</a> &nbsp/&nbsp
-              <a href="https://github.com/chaoyi-wu/">Github</a>
+              <a href="three-world@sjtu.edu.cn">Email</a> &nbsp/&nbsp
+              <a href="https://github.com/qiaoyu-zheng/">Github</a>
               <p style="text-align:center">
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="image/Chaoyi.JPG"><img style="width:100%;max-width:100%" alt="profile photo" src="image/Chaoyi.JPG" class="hoverZoomLink"></a>
+              <a href="image/Character.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="image/Character.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
 	
