--- a/RP3D-Diag/index.html
+++ b/RP3D-Diag/index.html
@@ -169,7 +169,7 @@
 <body>
 	<br>
 	<center>
-	<span style="font-size:36px">K-Diag: Knowledge-enhanced Disease Diagnosis in Radiographic Imaging</span><br><br><br>
+	<span style="font-size:36px">Large-scale Long-tailed Disease Diagnosis on Radiology Images</span><br><br><br>
 	</center>
   </table>
   
