--- a/RP3D-Diag/index.html
+++ b/RP3D-Diag/index.html
@@ -294,7 +294,7 @@
               architecture that enables to process arbitrary number of input scans, from various imaging modalities, which is trained with knowledge enhancement to leverage the rich domain knowledge; 
               (iii), on evaluation, we initialize a new benchmark for multi-modal multi-anatomy long-tailed diagnosis. Our method shows superior results on it. Additionally, our final model serves as 
               a pre-trained model, and can be finetuned to benefit diagnosis on various external datasets. </left></p>
-          <p><img style="width:800px" src='./resources/Intro.png'></p>
+          <p><img style="width:800px" src='./resources/Intro.jpg'></p>
       </div>
       <br>
       <hr>
