--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="image/Character.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="image/Character.jpg" class="hoverZoomLink"></a>
+              <a href="image/Character.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="image/Qiaoyu.png" class="hoverZoomLink"></a>
             </td>
           </tr>
 	
