--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                <strong>Qiaoyu Zheng*</strong>,
                <a>Weike Zhao*</a>,
                <a>Weixiongt Lin*</a>,
-               <a href="https://xiaoman-zhang.github.io/">Xiaoman Zhang*</a>,
+               <a href="https://xiaoman-zhang.github.io/">Xiaoman Zhang</a>,
                <a>Xiao Zhou*</a>,
                <a>Ziheng Zhao*</a>,
                      <a href="https://mediabrain.sjtu.edu.cn/yazhang/">Ya Zhang</a>,
