--- a/RP3D-Diag/index.html
+++ b/RP3D-Diag/index.html
@@ -385,7 +385,7 @@ The data covers 5,568 different disorders, that have been manually mapped into 9
     <p style="font-weight: bold; font-size: large;">
       R1: Classification results on Disorders and ICD-10-CM levels. 
     </p>
-    <p><img style="width:700px" src='./resources/table1.jpeg'></p>
+    <p><center><img style="width:700px" src='./resources/table1.jpeg'></center></p>
     <p>
       In the table ``FM'' represents the fusion module and ``KE'' represents the knowledge enhancement strategy. We report the results on Head/Medium/Tail class sets separately.
     </p>
@@ -393,7 +393,7 @@ The data covers 5,568 different disorders, that have been manually mapped into 9
     <p style="font-weight: bold; font-size: large;">
       R2: ROC curves on Disorders and ICD-10-CM.
     </p>
-    <p><img style="width:700px" src='./resources/table2.jpeg'></p>
+    <p><center><img style="width:700px" src='./resources/table2.jpeg'></center></p>
     <p>
       As depicts in ROC curves above, the shadow in the figure shown the 95% CI (Confidence interval) and FM, KE are short for Fusion Module and Knowledge Enhancement.
     </p>
@@ -402,7 +402,7 @@ The data covers 5,568 different disorders, that have been manually mapped into 9
     <p style="font-weight: bold; font-size: large;">
       R3: The AUC Score Comparison on Various External Datasets.
     </p>
-    <p><img style="width:700px" src='./resources/table3.jpeg'></p>
+    <p><center><img style="width:700px" src='./resources/table3.jpeg'></center></p>
     <p>
       For each dataset, we carry out experiments with different training data portions, denoted as 1% to 100% in the table. 
       For example, 30% represents we use 30% of data in the downstream training set for finetuning our model or training from scratch. 
