--- a/RP3D-Diag/index.html
+++ b/RP3D-Diag/index.html
@@ -291,7 +291,7 @@
                 <center>
                   <br>
                   <span style="font-size:20px">
-                    Dataset <a href="https://arxiv.org/abs/2312.16151"> [HuggingFace]</a>
+                    Dataset <a href="https://huggingface.co/datasets/QiaoyuZheng/RP3D-DiagDS"> [HuggingFace]</a>
                   </span>
                 </center>
               </td>
