--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <p style="text-align:center">
                 <name> Qiaoyu Zheng (郑乔予)</name>
               </p>
-              <p>Hello! I am a PhD student at <a href="https://mediabrain.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, advised by <a href="https://weidixie.github.io/">Prof. Weidi Xie</a></a>.
+              <p>Hello! I am a PhD candidate at <a href="https://mediabrain.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, advised by <a href="https://weidixie.github.io/">Prof. Weidi Xie</a></a>.
                 I graduated with a bachelor's degree in Computer Science from the School of Electronic Information and Electrical Engineering at Shanghai Jiao Tong University in June 2023.
               </p>
 	      <p>
