--- a/RP3D-Diag/index.html
+++ b/RP3D-Diag/index.html
@@ -320,7 +320,7 @@
       <hr>
       <center> <h2> The RP3D-DiagDS Dataset </h2> </center>
 
- <p><img style="width:800px" src='./resources/fig1.png'></p>
+ <p><img style="width:800px" src='./resources/RP3D-DiagDS.png'></p>
       <p>
 Overall, the proposed dataset contains 39,026 cases, 
 of 192,675 images from 9 diverse imaging modalities and 7 human anatomy regions, 
