--- a/RP3D-Diag/index.html
+++ b/RP3D-Diag/index.html
@@ -366,9 +366,6 @@ The data covers 5,568 different disorders, that have been manually mapped into 9
       <p><img style="width:800px" src='./resources/anatomy_good.png'></p> -->
       
       <p>
-        RP3D-DiagDS comprises images from 9 modalities, namely, computed
-        tomography (CT), magnetic resonance imaging (MRI), X-ray, Ultrasound, Fluoroscopy, Nuclear medicine,
-        Mammography, DSA (angiography), and Barium Enema.
         RP3D-DiagDS comprises images from various anatomical regions,
         including the head and neck, spine, chest, breast, abdomen and pelvis, upper limb, and lower limb, providing
         comprehensive coverage of the entire human body.
@@ -376,7 +373,7 @@ The data covers 5,568 different disorders, that have been manually mapped into 9
         classes. We define the “head class” category with case counts greater than 100, the “body class” category with
         case counts between 30 and 100, and the “tail class” category with case counts less than 30.
       </p>
-      <center><p><img style="width:600px" src='./resources/fig4.png'></p></center>
+      <!-- <center><p><img style="width:600px" src='./resources/fig4.png'></p></center> -->
 
       <br>
 
