--- a/RP3D-Diag/index.html
+++ b/RP3D-Diag/index.html
@@ -208,10 +208,12 @@
                 <span style="font-size:16px"><a href="https://xiaoman-zhang.github.io/">Xiaoman Zhang</a><sup>1,2</sup></span>
                 </center>
                 </td>
+                    <td align="center" width="160px">
               <center>
                 <span style="font-size:16px"><a href="https://scholar.google.com.hk/citations?user=QwhqAc8AAAAJ&hl=zh-CN">Lisong Dai</a><sup>1,3</sup></span>
                 </center>
                 </td>
+                    <td align="center" width="160px">
               <center>
                 <span style="font-size:16px">Hengyu Guan</a><sup>4,5</sup></span>
                 </center>
