--- a/RP3D-Diag/index.html
+++ b/RP3D-Diag/index.html
@@ -368,10 +368,9 @@
 
  <p><img style="width:800px" src='./resources/RP3D-DiagDS.png'></p>
       <p>
-Overall, the proposed dataset contains 39,026 cases, 
-of 192,675 images from 9 diverse imaging modalities and 7 human anatomy regions, 
-note that, each case may contain images of multiple scans. 
-The data covers 5,568 different disorders, that have been manually mapped into 930 <a href="https://www.icd10data.com/ICD10CM/Codes">ICD-10-CM</a> codes. 
+Overall, the proposed dataset contains 40,936 cases, of 195,010 images from 9 diverse imaging modalities and
+7 human anatomy regions, note that, each case may contain images of multiple scans. The data covers 5,568
+different disorders, that have been manually mapped into 930 <a href="https://www.icd10data.com/ICD10CM/Codes">ICD-10-CM</a> codes. 
       </p>
  <!-- <center><p><img style="width:500px" src='./resources/fig2.png'></p></center> -->
       <p>
@@ -386,8 +385,8 @@ The data covers 5,568 different disorders, that have been manually mapped into 9
         which are treated as diagnosis labels and have been meticulously peer-reviewed by experts in Radiopaedia Editorial Board.
       </p>
       <p>
-        After article filtering, manual mapping and normal cases adding, we get 39,026 cases containing 192,675 images labeled by 5,568 disorder classes and 930 ICD-10-CM classes.
-        We will continually maintain the dataset, growing the case number.
+        Finally, we get 40,936 cases containing 195,010 images labeled by 5,568 disorder classes and 930
+        ICD-10-CM classes and will continually maintain the dataset, growing the case number.
       </p>
 
       <p style="font-weight: bold; font-size: large;">
