--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           I am looking forward to the day when AI in healthcare can truly benefit humanity.
               </p>      
               <a href="three-world@sjtu.edu.cn">Email</a> &nbsp/&nbsp
-              <a href="https://github.com/qiaoyu-zheng/">Github</a>
+              <a href="https://github.com/qiaoyu-zheng/">Github</a>&nbsp/&nbsp
+              <a href="https://scholar.google.com/citations?user=JX0aJ2AAAAAJ&hl=zh-CN&oi=sra">Google Scholar</a>
               <p style="text-align:center">
               </p>
             </td>
