--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
             
                <a href="https://xiaoman-zhang.github.io/">Xiaoman Zhang</a>,
                      <a href="https://mediabrain.sjtu.edu.cn/yazhang/">Ya Zhang</a>,
-                     <a href="https://mediabrain.sjtu.edu.cn/members/">Yanfeng Wang </a>,
-                     <a href="https://weidixie.github.io/">Weidi Xie</a>
+                     <a href="https://mediabrain.sjtu.edu.cn/members/">Yanfeng Wang†</a>,
+                     <a href="https://weidixie.github.io/">Weidi Xie†</a>
                      <br>
-                     <em>Technical Report, 2023.</em><br>
+                     <em>Nature Communications, 2024.</em><br>
                      build up an academically accessible, large-scale diagnostic dataset, present a knowledge enhanced model architecture that enables to process arbitrary number of input scans from various imaging modalities, and initialize a new benchmark for multi-modal multi-anatomy long-tailed diagnosis. Our method shows
                      superior results on it. Additionally, our final model serves as a pre-trained model, and can be finetuned to
                      benefit diagnosis on various external datasets.
@@ -115,7 +115,7 @@
                <a>Ziheng Zhao*</a>,
                      <a href="https://mediabrain.sjtu.edu.cn/yazhang/">Ya Zhang</a>,
                      <a href="https://mediabrain.sjtu.edu.cn/members/">Yanfeng Wang </a>,
-                     <a href="https://weidixie.github.io/">Weidi Xie</a>
+                     <a href="https://weidixie.github.io/">Weidi Xie†</a>
                      <br>
                      <em>Technical Report, 2023.</em><br>
                      We present recent efforts on assessing GPT-4V for multimodal medical diagnosis, by case studies, covering 17 human body systems, across 8 clinical imaging modalities, e.g., radiology, pathology.
