--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <!-- 新添加的项目 -->
           <tr onmouseout="ld_stop()" onmouseover="ld_start()">
                    <td style="padding:0px;width:25%;vertical-align:middle">
-                     <img src="image/M3Builder.png" width="320" height="180" style="border-style: none">
+                     <img src="image/RadABench.png" width="320" height="180" style="border-style: none">
                    </td>
                    <td style="padding:10px;width:75%;vertical-align:middle">
                      <a href="https://arxiv.org/pdf/2412.09529">
@@ -67,7 +67,7 @@
                <a href="https://weidixie.github.io/">Weidi Xie†</a>
                <br>
                <em>Technical Report, 2024.</em><br>
-               We present M<sup>3</sup>Builder, an LLM-powered multi-agent system for autonomous end-to-end medical imaging AI model training—the first to automate ML in medical imaging, lowering the threshold for clinicians to develop and apply AI models, and promoting the widespread adoption of AI tools in real clinical scenarios.
+               We evaluates modern LLMs as agent cores in radiology environments through a comprehensive dataset, innovative evaluation platform, and performance assessments of leading models. Results highlight key challenges in tool comprehension, information synthesis, and format maintenance, confirming that while promising, current LLMs are not yet ready to serve as standalone radiology agent cores.
                    </td>
           </tr>
           
