--- a/index.html
+++ b/index.html
@@ -48,6 +48,29 @@
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <!-- M3Builder project -->
+          <tr onmouseout="ld_stop()" onmouseover="ld_start()">
+                   <td style="padding:0px;width:25%;vertical-align:middle">
+                     <img src="image/M3Builder.png" width="320" height="180" style="border-style: none">
+                   </td>
+                   <td style="padding:10px;width:75%;vertical-align:middle">
+                     <a href="https://arxiv.org/pdf/2502.20301">
+                       <papertitle>M³Builder: A Multi-Agent System for Automated Machine Learning in Medical Imaging</papertitle>
+                     </a>
+               <br>
+               <a>Jinghao Feng*</a>,
+               <strong>Qiaoyu Zheng*</strong>,
+               <a href="https://chaoyi-wu.github.io/">Chaoyi Wu</a>,
+               <a>Ziheng Zhao</a>,
+               <a href="https://mediabrain.sjtu.edu.cn/yazhang/">Ya Zhang</a>,
+               <a href="https://mediabrain.sjtu.edu.cn/members/">Yanfeng Wang</a>,
+               <a href="https://weidixie.github.io/">Weidi Xie†</a>
+               <br>
+               <em>Technical Report, 2025.</em><br>
+               We present M³Builder, an LLM-powered multi-agent system for autonomous end-to-end medical imaging AI model training—the first to automate ML in medical imaging, lowering the threshold for clinicians to develop and apply AI models, and promoting the widespread adoption of AI tools in real clinical scenarios.
+                   </td>
+          </tr>
+          
           <!-- 新添加的项目 -->
           <tr onmouseout="ld_stop()" onmouseover="ld_start()">
                    <td style="padding:0px;width:25%;vertical-align:middle">
