--- a/Deep-DxSearch/index.html
+++ b/Deep-DxSearch/index.html
@@ -542,7 +542,7 @@
                         <a href="https://henrychur.github.io/">Pengcheng Qiu</a><sup>1,2</sup>, 
                         <a href="https://www.shsmu.edu.cn/ekxy-en/info/1054/1402.htm">Yongguo Yu</a><sup>3</sup>, 
                         <a href="https://www.shsmu.edu.cn/english/info/1354/4178.htm"></a>Kun Sun<sup>3</sup>, 
-                        <a href="https://scholar.google.com/citations?user=x_sgJskAAAAJ&hl=zh-CN"></a>Wang<sup>1,2</sup>, 
+                        <a href="https://scholar.google.com/citations?user=x_sgJskAAAAJ&hl=zh-CN"></a>Yanfeng Wang<sup>1,2</sup>, 
                         <a href="https://scholar.google.com/citations?user=pbjw9sMAAAAJ&hl=zh-CN">Ya Zhang</a><sup>†,1,2</sup>, 
                         <a href="https://weidixie.github.io/">Weidi Xie</a><sup>†,1,2</sup>
                     </span>
